--- a/templates/server.conf.j2
+++ b/templates/server.conf.j2
@@ -180,3 +180,9 @@ script-security 3 execve
 {% if crl_pem_file.stat.exists %}
 crl-verify {{openvpn_keydir}}/crl.pem
 {% endif %}
+
+{% if openvpn_push_routes -%}
+{% for push_route in openvpn_push_routes -%}
+push "route {{ push_route }}"
+{% endfor -%}
+{% endif -%}
