disable TLS on openldap

--- a/templates/auth-ldap.conf.j2
+++ b/templates/auth-ldap.conf.j2
@@ -9,7 +9,7 @@
   TLSEnable {{ openvpn_ldap_tlsenable }}
 
   # TLS CA Certificate File
-  TLSCACertFile /etc/ssl/ca-cert.pem
+  # TLSCACertFile /etc/ssl/ca-cert.pem
 
   # TLS CA Certificate Directory
   TLSCACertDir  /etc/ssl/certs
